welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:2: error: not found: value baisserBrosse
  baisserBrosse();
  ^SnakeBuggle:7: error: not found: value get
      setY(get(Y)-1);
           ^SnakeBuggle:7: error: not found: value Y
      setY(get(Y)-1);
               ^