welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  baisserBrosse();
  while(true){
    if(!estFaceMur()){
      avance();
    }else{
      setY(get(Y)-1);
      gauche();
      gauche();
    }
  }
}
